<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#121318"
    tools:context=".fragment.EventDetail">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="48dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/event_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/event_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/event_layout2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded"
                        android:padding="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <androidx.cardview.widget.CardView
                            android:id="@+id/profile_image_container"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            app:cardCornerRadius="20dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <ImageView
                                android:id="@+id/profile_image"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:scaleType="centerCrop"
                                android:src="@drawable/ic_baseline_profile_24" />
                        </androidx.cardview.widget.CardView>

                        <TextView
                            android:id="@+id/username_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="Username"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="@id/profile_image_container"
                            app:layout_constraintStart_toEndOf="@id/profile_image_container"
                            app:layout_constraintTop_toTopOf="@id/profile_image_container" />

                        <TextView
                            android:id="@+id/timestamp_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Timestamp"
                            android:textColor="@color/white"
                            android:textSize="12sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/event_title"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="Mood Event Title"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/profile_image_container" />

                        <TextView
                            android:id="@+id/emotional_state_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:background="@drawable/flair_background"
                            android:paddingHorizontal="8dp"
                            android:paddingVertical="4dp"
                            android:text="Happy"
                            android:textColor="@color/white"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/event_title" />

                        <!-- Event Image -->

                        <TextView
                            android:id="@+id/social_situation_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="12dp"
                            android:background="@drawable/flair_background"
                            android:paddingHorizontal="8dp"
                            android:paddingVertical="4dp"
                            android:text="With Friends"
                            android:textColor="@color/white"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toEndOf="@+id/emotional_state_text"
                            app:layout_constraintTop_toBottomOf="@+id/event_title" />

                        <androidx.cardview.widget.CardView
                            android:id="@+id/event_detail_image_holder"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="16dp"
                            android:elevation="2dp"
                            app:cardCornerRadius="8dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/social_situation_text">
                            <ImageView
                                android:id="@+id/event_image"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:adjustViewBounds="true"
                                android:scaleType="fitCenter"
                                android:visibility="visible" />
                        </androidx.cardview.widget.CardView>
                        <!-- Event Reason -->
                        <TextView
                            android:id="@+id/reason_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="Reason"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/event_detail_image_holder" />

                        <TextView
                            android:id="@+id/reason_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text="Description of the mood event and why it happened..."
                            android:textColor="@color/white"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/reason_label" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>