...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_container" />

    <!-- ListView for mood events -->
    <ListView
        android:id="@+id/homeListView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:divider="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
